SASS and BEM metodology added

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           </div>
         </form>
 
-        <label class="label-modal-form" class="checkbox">
+        <label class="checkbox">
           <input class="chceckbox_input" type="checkbox" name="regulamin-acceptation" />
           <svg class="chceckbox_svg" width="16" height="15">
             <use href="./images/icons.svg#icon-Vector-1"></use>
