SASSS and BEM metodology applied

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       rel="stylesheet"
     />
     <link href="css/main.min.css" rel="stylesheet" />
-    <link href="style.css/visually-hidden.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -77,13 +76,13 @@
           <ul class="section-list">
             <!--Atut 1-->
             <li>
-              <div class="atuts-icons">
+              <div class="section-list_icon">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#icon-atuts-1"></use>
                 </svg>
               </div>
-              <h3 class="atuts-header">LOREM IPSUM</h3>
-              <p class="atuts-description">
+              <h3 class="section-list_header">LOREM IPSUM</h3>
+              <p class="section-list_description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -91,13 +90,13 @@
 
             <!--Atut 2-->
             <li>
-              <div class="atuts-icons">
+              <div class="section-list_icons">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#icon-atuts-2"></use>
                 </svg>
               </div>
-              <h3 class="atuts-header">LOREM IPSUM</h3>
-              <p class="atuts-description">
+              <h3 class="section-list_header">LOREM IPSUM</h3>
+              <p class="section-list_description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -105,13 +104,13 @@
 
             <!--Atut 3-->
             <li>
-              <div class="atuts-icons">
+              <div class="section-list_icons">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#icon-atuts-3"></use>
                 </svg>
               </div>
-              <h3 class="atuts-header">LOREM IPSUM</h3>
-              <p class="atuts-description">
+              <h3 class="section-list_header">LOREM IPSUM</h3>
+              <p class="section-list_description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -119,13 +118,13 @@
 
             <!--Atut 4-->
             <li>
-              <div class="atuts-icons">
+              <div class="section-list_icons">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#icon-atuts-4"></use>
                 </svg>
               </div>
-              <h3 class="atuts-header">LOREM IPSUM</h3>
-              <p class="atuts-description">
+              <h3 class="section-list_header">LOREM IPSUM</h3>
+              <p class="section-list_description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -184,7 +183,7 @@
 
                 <ul class="social-media-box">
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -192,7 +191,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -200,7 +199,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -208,8 +207,13 @@
                   </li>
 
                   <li>
-                    <a href="a">
-                      <svg class="svg-currentcolor" width="20px" height="20px">
+                    <a class="social-media-box_icon" href="a">
+                      <svg
+                        class="social-media-box_icon"
+                        class="svg-currentcolor"
+                        width="20px"
+                        height="20px"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -231,7 +235,7 @@
                 <p class="team-profession">Frontend Developer</p>
                 <ul class="social-media-box">
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -239,7 +243,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -247,7 +251,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -255,7 +259,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -278,7 +282,7 @@
                 <p class="team-profession">Marketing</p>
                 <ul class="social-media-box">
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -286,7 +290,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -294,7 +298,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -302,7 +306,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -325,7 +329,7 @@
                 <p class="team-profession">UI Designer</p>
                 <ul class="social-media-box">
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -333,7 +337,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -341,7 +345,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -349,7 +353,7 @@
                   </li>
 
                   <li>
-                    <a href="a">
+                    <a class="social-media-box_icon" href="a">
                       <svg class="svg-currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -429,22 +433,24 @@
             ><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a
           >
 
-          <address class="footer-list">
+          <address class="footer-wrap_list">
             <ul>
-              <li>
+              <li class="footer-wrap_list--li">
                 <a
-                  class="footer-adress"
+                  class="footer-wrap_list--adress"
                   href="https://goo.gl/maps/7QSvBzjsEZW71v4u5"
                   target="_blank"
                   rel="nofollow"
                   >m. Warszawa, Aleje Jerozolimskie 21</a
                 >
               </li>
-              <li>
-                <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
+              <li class="footer-wrap_list--li">
+                <a class="footer-wrap_list--contact" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
               </li>
-              <li>
-                <a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a>
+              <li class="footer-wrap_list--li">
+                <a class="footer-wrap_list--contact" href="tel:+48111111111">+48 111 111 111</a>
               </li>
             </ul>
           </address>
@@ -455,7 +461,7 @@
           <p class="join-us">DOŁĄCZ DO NAS</p>
           <ul class="social-media-box footer-box">
             <li>
-              <a href="a">
+              <a class="social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
@@ -463,7 +469,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -471,7 +477,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
@@ -479,7 +485,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="social-media-box_icon--footer" href="a">
                 <svg class="svg-currentcolor" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
