SASS and BEM metodology applied

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -27,27 +27,27 @@
     <header>
       <div class="container header-wrap">
         <a href="../index.html" class="logo"
-          ><span class="logo-web">Web</span><span class="logo-studio-header">Studio</span></a
+          ><span class="logo_web">Web</span><span class="logo_studio--header">Studio</span></a
         >
         <nav>
           <ul class="nav-list">
-            <li><a class="nav-links" href="../index.html">Agencja</a></li>
-            <li><a class="nav-links current" href="portfolio.html">Portfolio</a></li>
-            <li><a class="nav-links" href="#">Kontakt</a></li>
+            <li><a class="nav-list_subpage" href="../index.html">Agencja</a></li>
+            <li><a class="nav-list_subpage current" href="portfolio.html">Portfolio</a></li>
+            <li><a class="nav-list_subpage" href="#">Kontakt</a></li>
           </ul>
         </nav>
 
         <ul class="contact-list">
-          <li>
-            <a href="mailto:info@devstudio.com"
+          <li class="contact-list_element">
+            <a class="contact-list_element--link" href="mailto:info@devstudio.com"
               ><svg width="16px" height="12px">
                 <use href="../images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+48111111111"
+          <li class="contact-list_element">
+            <a class="contact-list_element--link" href="tel:+48111111111"
               ><svg width="10px" height="16px">
                 <use href="../images/icons.svg#icon-phone"></use>
               </svg>
