SASS and BEM metodology applied

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </section>
 
       <!--Zdjęcia pokazujące czym się zajmujemy-->
-      <section class="work">
+      <section class="offer">
         <div class="container">
           <h2 class="section-title">Czym się zajmujemy</h2>
           <ul class="section-list">
@@ -142,21 +142,21 @@
             <li>
               <div class="positioned-thumb">
                 <img src="./images/hw1zdj1.jpg" width="370" height="294" alt="hw1 zdjęcie1" />
-                <p class="positioned-label">APLIKACJE KOMPUTEROWE</p>
+                <p class="positioned-thumb_label">APLIKACJE KOMPUTEROWE</p>
               </div>
             </li>
             <!--zdjęcie 2-->
             <li>
               <div class="positioned-thumb">
                 <img src="./images/hw1zdj2.jpg" width="370" height="294" alt="hw1 zdjęcie2" />
-                <p class="positioned-label">APLIKACJE MOBILNE</p>
+                <p class="positioned-thumb_label">APLIKACJE MOBILNE</p>
               </div>
             </li>
             <!--zdjęcie 3-->
             <li>
               <div class="positioned-thumb">
                 <img src="./images/hw1zdj3.jpg" width="370" height="294" alt="hw1 zdjęcie3" />
-                <p class="positioned-label">ROZWIĄZANIA GRAFICZNE</p>
+                <p class="positioned-thumb_label">ROZWIĄZANIA GRAFICZNE</p>
               </div>
             </li>
           </ul>
@@ -177,9 +177,9 @@
                 height="260"
                 alt="zdjęcie pierwszej osoby"
               />
-              <div class="team-member">
-                <h3 class="team-names">John Doe</h3>
-                <p class="team-profession">Product Designer</p>
+              <div class="box-team_member">
+                <h3 class="box-team_member--names">John Doe</h3>
+                <p class="box-team_member--profession">Product Designer</p>
 
                 <ul class="social-media-box">
                   <li>
@@ -230,9 +230,9 @@
                 height="260"
                 alt="zdjęcie drugiej osoby"
               />
-              <div class="team-member">
-                <h3 class="team-names">John Doe</h3>
-                <p class="team-profession">Frontend Developer</p>
+              <div class="box-team_member">
+                <h3 class="box-team_member--names">John Doe</h3>
+                <p class="box-team_member--profession">Frontend Developer</p>
                 <ul class="social-media-box">
                   <li>
                     <a class="social-media-box_icon" href="a">
@@ -277,9 +277,9 @@
                 height="260"
                 alt="zdjęcie trzeciej osoby"
               />
-              <div class="team-member">
-                <h3 class="team-names">John Doe</h3>
-                <p class="team-profession">Marketing</p>
+              <div class="box-team_member">
+                <h3 class="box-team_member--names">John Doe</h3>
+                <p class="box-team_member--profession">Marketing</p>
                 <ul class="social-media-box">
                   <li>
                     <a class="social-media-box_icon" href="a">
@@ -324,9 +324,9 @@
                 height="260"
                 alt="zdjęcie czwartej osoby"
               />
-              <div class="team-member">
-                <h3 class="team-names">John Doe</h3>
-                <p class="team-profession">UI Designer</p>
+              <div class="box-team_member">
+                <h3 class="box-team_member--names">John Doe</h3>
+                <p class="box-team_member--profession">UI Designer</p>
                 <ul class="social-media-box">
                   <li>
                     <a class="social-media-box_icon" href="a">
@@ -372,7 +372,7 @@
           <h2 class="section-title">Nasi klienci</h2>
           <ul class="client-wrap">
             <li>
-              <a href="a">
+              <a class="client-wrap_element" href="a">
                 <svg class="svg-currentcolor" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client-1"></use>
                 </svg>
@@ -380,7 +380,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="client-wrap_element" href="a">
                 <svg class="svg-currentcolor" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client-2"></use>
                 </svg>
@@ -388,7 +388,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="client-wrap_element" href="a">
                 <svg class="svg-currentcolor" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client-3"></use>
                 </svg>
@@ -396,7 +396,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="client-wrap_element" href="a">
                 <svg class="svg-currentcolor" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client-4"></use>
                 </svg>
@@ -404,7 +404,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="client-wrap_element" href="a">
                 <svg class="svg-currentcolor" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client-5"></use>
                 </svg>
@@ -412,7 +412,7 @@
             </li>
 
             <li>
-              <a href="a">
+              <a class="client-wrap_element" href="a">
                 <svg class="svg-currentcolor" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client-6"></use>
                 </svg>
@@ -430,7 +430,7 @@
         <!--początek div "logo i kontakt"-->
         <div>
           <a href="index.html" class="logo"
-            ><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a
+            ><span class="logo_web">Web</span><span class="logo_studio--footer">Studio</span></a
           >
 
           <address class="footer-wrap_list">
@@ -508,7 +508,7 @@
                 placeholder="E-mail"
               />
               <button type="submit" class="button-newsletter">
-                <span>Zapisz się</span>
+                <span class="button-newsletter_singup">Zapisz się</span>
                 <svg width="24px" height="24px">
                   <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
