SASS and BEM metodology applied

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul class="section-list">
             <!--Atut 1-->
             <li>
-              <div class="section-list_icon">
+              <div class="section-list_icons">
                 <svg width="70px" height="70px">
                   <use href="./images/icons.svg#icon-atuts-1"></use>
                 </svg>
@@ -208,12 +208,7 @@
 
                   <li>
                     <a class="social-media-box_icon" href="a">
-                      <svg
-                        class="social-media-box_icon"
-                        class="svg-currentcolor"
-                        width="20px"
-                        height="20px"
-                      >
+                      <svg class="social-media-box_icon--currentcolor" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
